--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-flask==2.0.2
-flask_login==0.5.0
-flask_migrate==3.1.0
-WTForms==3.0.1
-flask_wtf==1.0.0
-flask_sqlalchemy==2.5.1
-sqlalchemy==1.4.29
-email_validator==1.1.3
-python-decouple==3.5
-gunicorn==20.1.0
-jinja2==3.0.3
-flask-restx==0.5.1
-Werkzeug==2.0.3
-apscheduler==3.9.1
-cryptography==37.0.2
-python-dotenv==1.0.1
-esipy==1.2.3
-Flask-Discord==0.1.69
-tqdm==4.67.1
+flask
+flask_login
+flask_migrate
+WTForms
+flask_wtf
+flask_sqlalchemy
+sqlalchemy
+email_validator
+python-decouple
+gunicorn
+jinja2
+flask-restx
+Werkzeug
+apscheduler
+cryptography
+python-dotenv
+esipy
+Flask-Discord
+tqdm
+flask_apscheduler
